# warehouse-cli

./: .gitignore  BRIEF.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
docs/: BRIEF.md  connector-format-comparison.md
src/: audit.rs  auth.rs  browse.rs  cli.rs  config.rs  connector.rs  connector_mgmt.rs  cookies.rs  db.rs  dynamic_connector.rs  fts.rs  governance.rs  main.rs  permissions.rs  schedule.rs  search.rs
src/sync/: contacts.rs  documents.rs  messages.rs  mod.rs  monarch.rs  notes.rs  photos.rs  pocketsmith.rs  reminders.rs  twitter.rs
