[package]
name = "warehouse-cli"
version = "0.3.2"
edition = "2021"
description = "Fast CLI for personal data warehouse - extraction, FTS5 search, and browsing"
license = "MIT"
keywords = ["search", "personal-data", "sqlite", "cli", "fts5"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "warehouse"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Database
rusqlite = { version = "0.32", features = ["bundled", "column_decltype"] }

# Config
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Filesystem
walkdir = "2"

# Document extraction
pdf-extract = "0.10"
calamine = "0.26"
zip = "2"

# HTTP
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Browser cookie temp files (Firefox cross-platform)
tempfile = "3"

# Misc
dirs = "6"
anyhow = "1"
regex = "1"

# macOS-only: Chromium cookie decryption (Keychain + AES-CBC)
[target.'cfg(target_os = "macos")'.dependencies]
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
pbkdf2 = { version = "0.12", features = ["hmac"] }
sha1 = "0.10"

[profile.release]
opt-level = 3
lto = true
strip = true
